--- a/Taskflow/src/main/resources/application.properties
+++ b/Taskflow/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=Taskflow
+spring.datasource.url=jdbc:postgresql://localhost:5432/taskflow_db
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
