--- a/Taskflow/src/main/resources/application.properties
+++ b/Taskflow/src/main/resources/application.properties
@@ -1,8 +1,18 @@
 spring.application.name=Taskflow
+server.port=8080
+server.servlet.context-path=/api
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC 
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/taskflow_db
 spring.datasource.username=postgres
 spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.open-in-view=false
+
+jwt.secret=Q7s5eXgR3fV8bH2pT9mMtY1zJ4wLcK6oI0aU3iBdN7yZ8xW2cFvA9uT5
+jwt.expiration-ms=86400000
